index.html edited because of problems with the images - changes with the movement to the left with the (keyArrow)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jumping Game</title>
-    <link rel="stylesheet" href="../game-proyect-april/css/main.css"/>
+    <link rel="stylesheet" href="./css/main.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,6 +17,6 @@
   <body>
     <div class="grid"></div>
 
-    <script src="../game-proyect-april/js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
