Adding instructions.html + intructions.js to the project

--- a/Instructions.html
+++ b/Instructions.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jumping Game</title>
-    <link rel="stylesheet" href="./css/main.css"/>
+    <title>Intro Jumping Game</title>
+    <link rel="stylesheet" href="./css/intro.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,8 +15,21 @@
   </head>
 
   <body>
-    <div class="grid"></div>
+    <div class="intro">
+        <h2>
+             ALLIEN
+            <br>
+            SURVIVOR
+        </h2>
 
-    <script src="./js/index.js"></script>
+        <img src="/img/instructions.png" alt="">
+    <div>
+        <button class="startButton"> START </button>
+    </div>
+
+    </div>
+
+    <script src="./js/instructions.js"></script>
   </body>
+  
 </html>
