Instructions Updated with start button

--- a/Instructions.html
+++ b/Instructions.html
@@ -24,12 +24,13 @@
 
         <img src="/img/instructions.png" alt="">
     <div>
-        <button class="startButton"> START </button>
+        <a href="./game.html"> 
+           <button class="startButton"> START </button> 
+        </a>
     </div>
 
     </div>
 
-    <script src="./js/instructions.js"></script>
   </body>
   
 </html>
