Trying to upload the images again v.2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             SURVIVOR
         </h2>
 
-        <img src="/img/instructions.png" alt="">
+        <img src="img/instructions.png" alt="">
     <div>
         <a href="./game.html"> 
            <button class="startButton"> START </button> 
