last updated music added to index.html 25.04.2024

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </div>
 
     </div>
+    <audio id="back-music" src="./sounds/background-music.mp3"></audio>
+    <script src="./js/index-javascript.js"></script>
 
   </body>
   
