Edition of readme.md file v.1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="intro">
         <h2>
-             ALLIEN
+             ALIEN
             <br>
             SURVIVOR
         </h2>
