Last updated 26.04.2024: Sound Effect corrected now functional and README.md file uploaded

--- a/game.html
+++ b/game.html
@@ -20,7 +20,9 @@
           <span id="score"></span>
         </div>
     </div>
+    <audio id="back-music" src="./sounds/background-music.mp3"></audio>
     <audio id="jumpSound" src="./sounds/jump_effect.wav"></audio>
+    <audio id="game-over-sound" src="./sounds/game-over.mp3"></audio>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="./js/index.js"></script>
   </body>
